Fix bogus paranthesis, From Henning Peternse in PR bin/44773.